# measurementset-simulator

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  Template.parset  distributed_ms_from_fits_rascil.ipynb  fits_to_vis.ipynb  generator.py  ms_from_fits_dataflow.ipynb  wast.html
.ipynb_checkpoints/: distributed_ms_from_fits_rascil-checkpoint.ipynb  fits_to_vis-checkpoint.ipynb  ms_from_fits_dataflow-checkpoint.ipynb
SGRA.ms/: table.f1_TSM0  table.f5_TSM0
dataflow/: CMakeLists.txt  STD_DEGRID  image.fits  main.c  preesm.h  top.c  top.h
dataflow/config/: wproj_manualconj_degridding_kernel_supports_x16.csv  wproj_manualconj_degridding_kernels_imag_x16.csv  wproj_manualconj_degridding_kernels_real_x16.csv  wproj_manualconj_gridding_kernels_real_x16.csv
dataflow_simulator/: README.md  csv_to_fits.py  fits_to_csv.py  kernel_real.csv  ms_from_fits_dataflow.ipynb  plot_im.py  plot_vis.py  psf.py
dataflow_simulator/code/: CMakeLists.txt  STD_DEGRID  common.h  main.c  top.c
dataflow_simulator/code/config/: kernel_imag.csv  kernel_real.csv  kernel_support.csv  w-proj_kernels_imag_x16_2458_image.csv  w-proj_kernels_real_x16_2458_image.csv  wproj_manualconj_degridding_kernels_imag_x16.csv  wproj_manualconj_degridding_kernels_real_x16.csv  wproj_manualconj_gridding_kernel_supports_x16.csv  wproj_manualconj_gridding_kernels_imag_x16.csv  wproj_manualconj_gridding_kernels_real_x16.csv
skao_lib_simulator/: RP1C_transit.py  distributed_ms_from_fits_rascil.ipynb
spectral_fits/: image_1.40MHz.fits  image_1.80MHz.fits  image_1.90MHz.fits  image_2.00MHz.fits
(+58 files in other folders)
